[tool.poetry]
name = "aws-manager"
version = "0.1.0"
description = ""
authors = ["Rubén Fernández Fuertes <fernandezfuertesruben@gmail.com>"]
readme = "README.md"
packages = [{ include = "aws_manager", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
